# OOP-in-C

./: CMakeLists.txt
encapsulation/: CMakeLists.txt
inheritance/: CMakeLists.txt
polymorphism/: CMakeLists.txt  circle.c  circle.h  main.c  rect.c  rect.h  shape.c  shape.h
